# rust-ffi-demo

./: CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  cbindgen.toml
cpp/: main.cpp
include/: rust_ffi_demo.h
src/: core.rs  ffi.rs  lib.rs
